fixed(navbar): aligned menu btn and darkmode btn

--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -1,5 +1,5 @@
 .burger{
-  position: relative;
+  position: absolute;
   height: 30px;
   width: 30px;
   cursor: pointer;
@@ -7,6 +7,8 @@
   justify-content: center;
   align-items: center;
   transition: .5s ease;
+  top: 25px;
+  right: 15px;
 }
 .burger .bar{
   width: 100%;
